[package]
name = "gemini-map"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wong <yuyeung.wong@gmail.com>"]
description = "A command-line tool to run files in parallel through Google Gemini"
license = "Apache-2.0"
homepage = "https://github.com/spoj/gemini-map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] } # Added for HTTP calls
serde = { version = "1.0", features = ["derive"] } # Added for request/response structs
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1" # Optional but recommended
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Optional
mime_guess = "2.0" # For guessing MIME types
base64 = "0.22" # For base64 encoding
mime = "0.3" # Added for mime constants
url = "2.5" # Added for URL parsing
lopdf = "0.36" # Use lopdf for creating single-page PDFs

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
wiremock = "0.6"
serde_json = "1.0"
regex = "1" # Added for concurrency test assertions