[package]
name = "gemini-map"
version = "0.1.2"
edition = "2024"
authors = ["Matthew Wong <yuyeung.wong@gmail.com>"]
description = "A command-line tool to run files in parallel through Google Gemini"
license = "Apache-2.0"
homepage = "https://github.com/spoj/gemini-map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0"
base64 = "0.22"
mime = "0.3"
url = "2.5"
lopdf = "0.36"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
wiremock = "0.6"
serde_json = "1.0"
regex = "1"